# teamify

./: LICENSE  README.md
backend/: main.py  pyproject.toml
backend/src/: app.py  config.py  dependencies.py
backend/src/auth/: config.py  dependencies.py  router.py  schemas.py  security.py  services.py
backend/src/database/: annotated_types.py  config.py  repositories.py  setup.py  types.py
backend/src/database/types/: aliases.py  annotated_types.py  type_vars.py
backend/src/encryption/: config.py  dependencies.py  dependencoes.py  services.py
backend/src/faceit/: config.py  dependencies.py  models.py  repositories.py  router.py  schemas.py  services.py
backend/src/lfg_responses/: dependencies.py  models.py  repositories.py  router.py  schemas.py  services.py
backend/src/lfg_statuses/: dependencies.py  models.py  repositories.py  router.py  schemas.py  services.py
backend/src/profiles/: dependencies.py  models.py  repositories.py  router.py  schemas.py  services.py
backend/src/reviews/: dependencies.py  models.py  repositories.py  router.py  schemas.py  services.py
backend/src/users/: dependencies.py  models.py  repositories.py  schemas.py  services.py
backend/src/websockets/: dependencies.py
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  api.js  main.js  utils.js
frontend/src/assets/: main.css
frontend/src/components/: Header.vue  LFGCard.vue  LFGNotification.vue  RatingStars.vue  Review.vue  Spinner.vue
frontend/src/pages/: AuthCallback.vue  Home.vue  LFGLobby.vue  Profile.vue
(+3 files in other folders)
